fixed spacing & fixed NaN message

--- a/generator.css
+++ b/generator.css
@@ -4,13 +4,14 @@
 	text-align:center;
 	line-height: 40px;
 	padding-top: 60px;
-	padding-bottom: 10px;
+	padding-bottom: 30px;
 }
 
 a {
 	text-decoration: none;
 	display: block;
 	color: black;
+	padding-bottom: 5px;
 }
 
 .button {
